--- a/src/app/components/employeelist/employeelist.component.html
+++ b/src/app/components/employeelist/employeelist.component.html
@@ -1,25 +1,41 @@
-<table class="example-table mat-elevation-z8" mat-table recycleRows [dataSource]="listdata">
-    <!-- Name  -->
-    <ng-container matColumnDef="Employee Name">
-        <th mat-header-cell *matHeaderCellDef> Employee Name </th>
-        <td mat-cell *matCellDef="let element" class="text-center">
-             {{element.employeename}} </td>
-    </ng-container>
-    <!-- Email -->
-    <ng-container matColumnDef="Employee Email">
-        <th mat-header-cell *matHeaderCellDef> EmployeeEmail </th>
-        <td mat-cell *matCellDef="let element" class="text-center"> {{element.empoyeeemail}} </td>
-    </ng-container>
-
-    <!-- mobile -->
-    <ng-container matColumnDef="Employee Phone Number">
-        <th mat-header-cell *matHeaderCellDef> Employee Phone Number </th>
-        <td mat-cell *matCellDef="let element" class="text-center">
-            +91&nbsp;{{element.employeephonenumber}}
-        </td>
-    </ng-container>
-    <!-- Aadhar -->
- 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+           
+            <div class="employlist ">
+                
+                <h2 class="text-center">Employee list</h2>
+                <div class="tr mb10">
+                    <button type="submit" class="btn btn-primary pl-2" routerLink="/employe">Register</button>
+                    <button type="submit" class="btn btn-primary pl-2" (click)="logout()">Logout</button>
+                </div>
+                <table class="example-table mat-elevation-z8 mb10" mat-table recycleRows [dataSource]="listdata">
+                <!-- Name  -->
+                <ng-container matColumnDef="Employee Name">
+                    <th mat-header-cell *matHeaderCellDef> Employee Name </th>
+                    <td mat-cell *matCellDef="let element" class="text-center">
+                         {{element.employeename}} </td>
+                </ng-container>
+                <!-- Email -->
+                <ng-container matColumnDef="Employee Email">
+                    <th mat-header-cell *matHeaderCellDef> EmployeeEmail </th>
+                    <td mat-cell *matCellDef="let element" class="text-center"> {{element.empoyeeemail}} </td>
+                </ng-container>
+            
+                <!-- mobile -->
+                <ng-container matColumnDef="Employee Phone Number">
+                    <th mat-header-cell *matHeaderCellDef> Employee Phone Number </th>
+                    <td mat-cell *matCellDef="let element" class="text-center">
+                        +91&nbsp;{{element.employeephonenumber}}
+                    </td>
+                </ng-container>
+                <!-- Aadhar -->
+             
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            
+            </div>
+        </div>
+    </div>
+</div>
